--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   
   # URL launcher
   url_launcher: ^6.3.1
+  
+  # Image picker for profile pictures
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
