feat: Implement comprehensive notification system for user reminders
- Added dependencies for local notifications, timezone support, work manager, and permission handling in pubspec.yaml.
- Registered permission handler plugin in Windows platform files.
- Created NotificationsScreen to manage user notification preferences with toggle switches for various reminders.
- Developed NotificationService to handle scheduling and displaying notifications for health tips, hydration, movement, sun protection, self-checks, and weekly wellness check-ins.
- Implemented functionality to request notification permissions and manage notification settings using SharedPreferences.
- Added test notification feature for debugging purposes.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,18 @@ dependencies:
   
   # Date formatting
   intl: ^0.19.0
+  
+  # Local notifications for background reminders
+  flutter_local_notifications: ^19.0.0
+  
+  # Timezone support for scheduled notifications
+  timezone: ^0.10.0
+  
+  # Workmanager for background tasks (Android)
+  workmanager: ^0.5.2
+  
+  # Permission handler
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
