--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dependencies:
   timezone: ^0.10.0
   
   # Workmanager for background tasks (Android)
-  workmanager: ^0.5.2
+  workmanager: ^0.9.0+3
   
   # Permission handler
   permission_handler: ^11.3.1
