--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,12 @@ dependencies:
   
   # Permission handler
   permission_handler: ^11.3.1
+  
+  # State management with Riverpod
+  flutter_riverpod: ^2.6.1
+  
+  # Dependency injection
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
